# digital-wave

./: Makefile  README.md  predict_model.py  pyproject.toml  requirements.txt
config/: train.yaml
digital_wave/: bbox_utils.py
notebooks/: inference_jupyter.ipynb  train_model.ipynb
