[tool.poetry]
name = "digital-wave"
version = "0.1.0"
description = ""
authors = ["Svechnikar Daniil <https://github.com/DanilSvechnikar>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.5.0"
torchvision = "^0.20.0"
ultralytics = "^8.3.29"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.5"
notebook = "^7.2.2"
hydra-core = "^1.3.2"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
